# hanime-tv-plugin

./: pyproject.toml
src/htv_search/: __init__.py
src/yt_dlp_plugins/extractor/: htv.py
