[tool.poetry]
name = "hanime-tv-plugin"
version = "2026.01.06"
description = "hanime.tv extractor plugin for yt-dlp"
authors = ["Cynthia <cynthia2048@proton.me>"]
readme = "README.md"
packages = [
  { include = "htv_search", from = "src" },
  { include = "yt_dlp_plugins/extractor", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"

[tool.poetry.scripts]
htv-search = "htv_search:htv_search"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
